infrastructure/net_sec-group.tf
# Define the security group for public subnets

resource "aws_security_group" "frontend_sg" {
  name        = "vpc_sg_R42"
  description = "Allow HTTP & SSH inbound connections"
  vpc_id = "${var.vpc_id}"

  ingress {
    from_port   = 8081
    to_port     = 8081
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
   
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  tags {
    Name = "HTTP & SSH Security Group"
  }

}
